--- a/app/src/main/res/layout/add_service.xml
+++ b/app/src/main/res/layout/add_service.xml
@@ -12,12 +12,12 @@
         android:id="@+id/nameAddServiceInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="85dp"
         android:layout_marginTop="33dp"
         android:layout_marginBottom="24dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="@string/nameAddServiceTB"
+        android:layout_gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/costAddServiceInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,12 +27,12 @@
         android:id="@+id/costAddServiceInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="83dp"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="26dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="@string/costAddServiceTB"
+        android:layout_gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/descriptionAddServiceInput"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,9 +42,9 @@
         android:id="@+id/descriptionAddServiceInput"
         android:layout_width="312dp"
         android:layout_height="233dp"
-        android:layout_marginLeft="34dp"
         android:layout_marginTop="13dp"
         android:layout_marginBottom="17dp"
+        android:layout_gravity="center"
         android:ems="10"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/addServiceAddServiceBtn"
