--- a/app/src/main/res/layout/guest_service.xml
+++ b/app/src/main/res/layout/guest_service.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     android:theme="@style/allPages"
-    tools:context=".GuestService">
+    tools:context=".other.GuestService">
 
     <TextView
         android:id="@+id/nameGuestServiceText"
